erase personal data

--- a/index.html
+++ b/index.html
@@ -91,9 +91,8 @@
         </div>
 
 	<footer>
-		Por Iago Gomez Salgado @ Proxecto final de Ciclo Superior en Administración de Sistemas Informáticos en Rede 2013-2014<br />
 		<a href="http://nqysit.com" target="_blank"><img src="imaxes/nq.jpg" /></a>Grazas a <a href="http://nqysit.com" target="_blank">NQysit.com</a> polo aloxanmento.<a href="http://nqysit.com" target="_blank"><img src="imaxes/nq.jpg" /></a><br /> 
-		<a href="mailto:gziagogomez@gmail.com" target="_blank"><img src="imaxes/mail.png" /></a><a href="http://twitter.com/hacklego" target="_blank"><img src="imaxes/twitter.png" /></a><a href="http://www.linkedin.com/pub/iago-g%C3%B3mez/59/7b3/429" target="_blank"><img src="imaxes/linkedin.png" /></a>
+		<a href="mailto:" target="_blank"><img src="imaxes/mail.png" /></a><a href="" target="_blank"><img src="imaxes/twitter.png" /></a><a href="" target="_blank"><img src="imaxes/linkedin.png" /></a>
 	</footer>
            
     </section>
